--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,17 +18,17 @@
     	<li><%= link_to "API", api_v1_lists_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <form class="navbar-form navbar-left">
+        <form class="navbar-form navbar-left" method="get" action="api/v1/lists/">
 	        <div class="form-group">
-	          <input type="text" class="form-control" placeholder="Search">
+	          <input type="text" class="form-control" placeholder="Search ID or Name" name="id">
 	        </div>
 	        <button type="submit" class="btn btn-default">Submit</button>
 	      </form>
 	      <% if user_signed_in? %>
-					<li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-				<% else %>
-					<li><%= link_to "Login", user_session_path %></li>
-				<% end %>
+            	<li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+            	<li><%= link_to "Login", user_session_path %></li>
+            <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
